10025 FIX Discovery page: Improve usability
Several changes have been made:

<ul>
<li>The plugin name column can now be hidden</li>
<li>The columns check parameters, discovered labels and plugin names are now hidden by default as intended</li>
<li>The action buttons on top of the page have been reordered</li>
</ul>

--- a/web/htdocs/themes/classic/scss/_wato.scss
+++ b/web/htdocs/themes/classic/scss/_wato.scss
@@ -253,6 +253,22 @@ a.service_button.disabled {
     -webkit-filter: grayscale(1);
 }
 
+div#service_container div.action_buttons {
+  div.left {
+    float: left;
+  }
+
+  div.right {
+    float: right;
+  }
+
+  span.button_spacer {
+    display: inline-block;
+    width: 12px;
+  }
+}
+
+
 .wato table.data tr.data td.bulksearch {
     padding-right: 0px;
     white-space: nowrap;
